# esp-idf

./: .gitignore
components/esp-tls/: CMakeLists.txt  Kconfig  component.mk  esp_tls.c  esp_tls.h  esp_tls_mbedtls.c  esp_tls_wolfssl.c
components/fatfs/diskio/: diskio.c
components/fatfs/src/: ff.c
components/newlib/platform_include/sys/: dirent.h
components/wpa_supplicant/: CMakeLists.txt
components/wpa_supplicant/include/utils/: wpabuf.h
components/wpa_supplicant/port/include/: os.h
components/wpa_supplicant/src/common/: defs.h  ieee802_11_defs.h  sae.h  wpa_common.c  wpa_common.h
components/wpa_supplicant/src/crypto/: aes-siv.c  ccmp.c  crypto.h  crypto_wolfssl.c  fips_prf_wolfssl.c  tls_wolfssl.c
components/wpa_supplicant/src/eap_peer/: eap.c  eap_mschapv2.c  eap_peap.c  eap_tls.c  eap_tls_common.c  eap_ttls.c
components/wpa_supplicant/src/esp_supplicant/: esp_wpa2.c  esp_wpa3.c  esp_wpas_glue.c  esp_wps.c
components/wpa_supplicant/src/radius/: radius.h
components/wpa_supplicant/src/utils/: common.h  ip_addr.h
